--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -22,6 +22,7 @@
 @import "components/animate";
 @import "components/hint";
 @import "components/diag-line";
+@import "components/shortcodes";
 
 @import "layout/footer";
 @import "layout/header";
