--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -145,3 +145,77 @@
         margin: 50px -20%;
     }
 }
+
+// vidpic shortcode
+#vidpic-content.gallery__single {
+    margin: 0 -30%;
+    @include display(flex);
+    @include align-items(center);
+    @include justify-content(center);
+    @include media($bp-small) {
+        margin: 0;
+        @include flex-direction(column);
+        @include flex-wrap(wrap);
+    }
+    @include media($bp-med) {
+        margin: 25px 0;
+        @include flex-direction(column);
+        @include flex-wrap(wrap);
+    }
+    @include media($mobile-landscape) {
+        @include flex-direction(column);
+        @include flex-wrap(wrap);
+    }
+    @include media($bp-large) {
+        margin: 40px -25%;
+    }
+}
+
+#vidpic-content.gallery__single {
+    .gallery__single-half.gallery-image.vidpic-vid {
+        position: relative;
+        width: 120%;
+        height: 450px;
+        -webkit-overflow-scrolling: touch;
+        @include flex(0 0 500px);
+        @include media($bp-small) {
+            height: 300px;
+            width: 100%;
+            margin: 0 0 25px;
+            @include flex(0 0 300px);
+        }
+        @include media($bp-med) {
+            height: 400px;
+            width: 100%;
+        }
+        @include media($bp-large) {
+            height: 290px;
+        }
+        @include media($bp-xlarge) {
+            height: 500px;
+        }
+        iframe {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            overflow-x:hidden;
+            overflow-y:hidden;
+        }
+    }
+}
+
+#vidpic-content.gallery__single {
+    .gallery__single-half.gallery-caption.vidpic-pic {
+        background-color: transparent;
+        padding: 0 0 0 20px;
+        @include flex(0 1 auto);
+        @include media($bp-small) {
+            margin: 0 0 25px;
+            padding: 0;
+        }
+        img {
+            width: auto;
+            max-height: 280px;
+        }
+    }
+}
