--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -147,7 +147,8 @@
 }
 
 // vidpic shortcode
-#vidpic-content.gallery__single {
+
+.vidpic-content.gallery__single {
     margin: 0 -30%;
     @include display(flex);
     @include align-items(center);
@@ -171,7 +172,7 @@
     }
 }
 
-#vidpic-content.gallery__single {
+.vidpic-content.gallery__single {
     .gallery__single-half.gallery-image.vidpic-vid {
         position: relative;
         width: 120%;
@@ -192,7 +193,7 @@
             height: 290px;
         }
         @include media($bp-xlarge) {
-            height: 500px;
+            height: 300px;
         }
         iframe {
             position: relative;
@@ -204,7 +205,7 @@
     }
 }
 
-#vidpic-content.gallery__single {
+.vidpic-content.gallery__single {
     .gallery__single-half.gallery-caption.vidpic-pic {
         background-color: transparent;
         padding: 0 0 0 20px;
@@ -217,5 +218,28 @@
             width: auto;
             max-height: 280px;
         }
+    }
+}
+
+.blog-entry {
+    .gallery__single:nth-child(even) .gallery__single-half.gallery-image {
+        @include order(2);
+        @include media($bp-small) {
+            @include order(-1);
+        }
+        @include media($bp-med) {
+            @include order(-1);
+        }
+        @include media($mobile-landscape) {
+            @include order(-1);
+        }
+        img {
+            padding-right: 0;
+            padding-left: 0;
+        }
+    }
+    .gallery__single:nth-child(even) .gallery__single-half.gallery-caption {
+        padding-left: 0;
+        padding-right: 20px;
     }
 }
