Update: content h3 tweak - main heading weight

--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -392,7 +392,8 @@ main {
 	}
 	h3 {
 		text-transform: uppercase;
-		margin-bottom: 5px;
+		margin-bottom: 8px;
+		font-family: $main-headings;
 		@include media($mobile-landscape) {
 		    margin-top: 20px;
 		}
