--- a/custom/themes/ingenuity/src/sass/layout/_footer.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_footer.scss
@@ -283,5 +283,18 @@ form.footer-newsletter {
 	}
 }
 
+// Hype Creds
+#hypenotic-creds {
+	text-align: right;
+	background-color: $black;
+	padding: 0px 30px 10px;
+}
+
+
+
+
+
+
+
 
 
