Update: logo and template sections

--- a/styleguide/custom/themes/styleguide/src/sass/base/_typography.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/base/_typography.scss
@@ -285,6 +285,10 @@ p.custom-heading {
 	line-height: modular-scale(0, 1rem);
 }
 
+.logo-descrip__text {
+	margin-bottom: 0;
+}
+
 // PHOTOGRAPHY SECTION ==================
 
 .photography__content {
