Updates home rotating text - for older IE versions

--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -207,7 +207,7 @@ h2.rw-sentence{
 }
 
 .rw-words{
-	display: inline;
+	display: inline-block;
 	// text-indent: 10px;
 	&:hover a.rotator-link {
 		color: $black;
