--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -60,6 +60,61 @@
 	}
 }
 
+.video-overlay {
+	&:before {
+		content:"";
+		display: block;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		background-color: rgba(0,0,0,.4);
+	}
+	
+}
+
+video#bgvid { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    // min-width: 100%;
+    // min-height: 100%;
+    width: 115%;
+    height: 115%;
+    z-index: -100;
+    // -ms-transform: translateX(-50%) translateY(-50%);
+    // -moz-transform: translateX(-50%) translateY(-50%);
+    // -webkit-transform: translateX(-50%) translateY(-50%);
+    // transform: translateX(-50%) translateY(-50%);
+    background: url(polina.jpg) no-repeat;
+	background-size: cover; 
+	@include media($bp-med) {
+		top: -300px;
+		left: -300px;
+		width: 200%;
+		height: 200%;
+	}
+	@include media($bp-large) {
+		top: -160px;
+		left: -160px;
+		width: 150%;
+		height: 150%;
+	}
+	@include media($bp-xlarge) {
+		top: -200px;
+		left: -200px;
+		width: 140%;
+		height: 140%;
+	}
+	@include media($bp-xxlarge) {
+		top: -200px;
+		left: -200px;
+		width: 135%;
+		height: 135%;
+	}
+}
+
 // @media (min-aspect-ratio: 16/9) {
 //   .fullscreen-bg__video {
 //     height: 300%;
