--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -76,18 +76,18 @@
 
 video#bgvid { 
     position: absolute;
-    top: 0;
-    left: 0;
+    top: -120%;
+    left: -50%;
     // min-width: 100%;
     // min-height: 100%;
-    width: 115%;
-    height: 115%;
+    width: 350%;
+    height: 350%;
     z-index: -100;
     // -ms-transform: translateX(-50%) translateY(-50%);
     // -moz-transform: translateX(-50%) translateY(-50%);
     // -webkit-transform: translateX(-50%) translateY(-50%);
     // transform: translateX(-50%) translateY(-50%);
-    background: url(polina.jpg) no-repeat;
+    // background: url(polina.jpg) no-repeat;
 	background-size: cover; 
 	@include media($bp-med) {
 		top: -300px;
