--- a/custom/themes/ingenuity/src/sass/layout/_home.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_home.scss
@@ -92,7 +92,7 @@ video#bgvid {
     // -moz-transform: translateX(-50%) translateY(-50%);
     // -webkit-transform: translateX(-50%) translateY(-50%);
     // transform: translateX(-50%) translateY(-50%);
-    // background: url(polina.jpg) no-repeat;
+    background: url('../../src/video/poster.jpg') no-repeat;
 	background-size: cover; 
 	@include media($bp-med) {
 		top: -300px;
