--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -140,5 +140,5 @@ $body-type: 'Neuton', serif;
 $heading-type: 'Barlow Condensed', sans-serif;
 $heading-type: $main-headings;
 
-// $bold-font: "Audimat3000-Regulier", sans-serif;
-// $main-body-font: $p-font;
+$bold-font: "Audimat3000-Regulier", sans-serif;
+$main-body-font: $p-font;
