--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -81,7 +81,9 @@ div.bigcopy {
 		}
 		@media #{$bp-med} {
 		    font-size: modular-scale(0, 1.5rem);
-		    line-height: modular-scale(1, 1.5rem);
+			line-height: modular-scale(1, 1.5rem);
+			font-size: 22px;
+			line-height: 1.5;
 		}
 		@media #{$mobile-landscape} {
 			font-size: modular-scale(0, 1.3rem);
