--- a/src/sass/views/services.scss
+++ b/src/sass/views/services.scss
@@ -1,72 +1,10 @@
-<template>		
-	<div v-if="pageInfo != null">
-        <app-banner :page="pageInfo"></app-banner>
-        <div class="main-wrapper">
-            <div class="main-content standard-center">
-                <div v-html="pageInfo.content.rendered"></div>
-            </div>
-        </div>
-    </div>
-    <div v-else></div>
-</template>
-
-<script>
-import axios from 'axios';
-// import moment from 'moment';
-import { mapState } from 'vuex';
-import Banner from '../components/Banner.vue';
-export default {
-	metaInfo: {
-      	// title will be injected into parent titleTemplate
-	  	title: 'About Us',
-	  	meta: [
-		  { name: 'description', content: 'Imagine you could start a Design Build & General Contracting business from scratch. In THIS era. We did.' }
-		]
-    },
-    components: {
-        appBanner: Banner
-    },
-	data() {
-		return {
-			errors: [],
-			fullPath: this.$route.fullPath,
-			slug: this.$route.path
-		}
-	},
-	filters: {
-    },
-    computed: {
-        pageInfo: function(){
-            if (this.$store.state.pageList != null) {
-                for (let page of this.$store.state.pageList ) {
-                    if (page.slug == 'about-us') {
-                        console.log(page);
-                        return page;
-                        break;
-                    }
-                }
-            } else {
-                return null;
-            }
-        }
-    },
-	methods: {
-	},
-	created() {
-	},
-};
-</script>
-
-<style lang="scss" scoped>
-
-@import '../sass/variables.scss';
-
 .two-column {
 	margin: 60px -25% 60px -20%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     flex-direction: column;
+    flex-wrap: wrap;
 	@media #{$bp-small} {
 		margin: 40px -5%;
 	}
@@ -78,6 +16,7 @@ export default {
 	}
 	@media #{$bp-large} {
 		flex-direction: row;
+		margin: 60px -25% 60px -20%;
 	}
 }
 
@@ -89,6 +28,26 @@ export default {
 	}
 }
 
+.services-approach {
+    h3 {
+        text-align: center;
+    }
+    h4 {
+        margin-top: 0;
+    }
+    .two-column {
+        margin-top: 30px;
+        justify-content: space-between
+    }
+    .two-column__half {
+        @media #{$bp-large} {
+            width: 45%;
+        }
+        @media #{$bp-small} {
+        }
+    }
+}
+
 .services-testimonial {
 	padding: 0 70px 25px 0;
 	@media #{$bp-small} {
@@ -96,6 +55,9 @@ export default {
 	}
 	@media #{$bp-med} {
 		padding: 25px;
+	}
+	@media #{$bp-large} {
+		padding: 0 70px 25px 0;
 	}
 	@media #{$mobile-landscape} {
 		padding: 0 15px 25px;
@@ -128,6 +90,8 @@ export default {
 		line-height: modular-scale(1, 1.6rem);
 		font-weight: 400;
 		font-family: $p-font;
+		font-size: 32px;
+		line-height: 34px;
 		p {
 			font-style: italic;
 			font-size: modular-scale(1, 1.5rem);
@@ -144,7 +108,7 @@ export default {
 		    content: '“';
 		    position: absolute;
 		    margin-left: -.4em;
-		    font-size: modular-scale(4, 1.6rem);
+		    font-size: 90px;
 		    font-family: $main-headings;
 		    color: rgba(0,0,0,0.2);
 		}
@@ -160,10 +124,14 @@ export default {
 		margin-top: 25px;
 		text-align: right;
 		text-transform: uppercase;
+		font-size: 32px;
+		line-height: 36px;
 	}
 	h5 {
 		text-align: right;
 		margin: 0;
+		font-size: 13px;
+		line-height: 13px;
 	}
 	p.testimonial__caption {
 		font-family: $lite-headings;
@@ -175,6 +143,7 @@ export default {
 		line-height: modular-scale(0, 1rem);
 		font-size: 14px;
 		line-height: 16px;
+		margin: 0;
 	}
 }
 
@@ -220,5 +189,3 @@ export default {
 		// font-weight: 400;
 	}
 }
-
-</style>
