--- a/src/sass/views/contact.scss
+++ b/src/sass/views/contact.scss
@@ -27,9 +27,14 @@
         margin: 0;
         color: #444;
     }
+    img {
+        display: block;
+        margin: 0 auto;
+    }
 }
 
 .contact__single__buttons {
+    text-align: center;
     button {
         font-family: "Audimat3000-Regulier",sans-serif;
         font-size: 24px;
