--- a/src/sass/views/home.scss
+++ b/src/sass/views/home.scss
@@ -276,17 +276,17 @@ h2.rw-sentence{
 		font-size: modular-scale(3); 
 		line-height: modular-scale(3, 1.75rem); 
 	}
-	@media #{$bp-large} {
+	@media #{$large-and-up} {
 		margin: 0 8%;
 		text-align: left;
 	    font-size: 101px; //32px
-		    line-height: 114px;
+		line-height: 114px;
 	}	
-	@media #{$bp-xlarge} {
+	@media #{$xlarge-and-up} {
 		margin: 0 8%;
 		text-align: left;
-	    font-size: modular-scale(5, 1.6rem); 
-		line-height: modular-scale(5, 1.8rem);
+		font-size: 101px; //32px
+		line-height: 114px;
 	}
 	@media #{$bp-xxlarge} {
 		margin: 0 8%;
