--- a/src/sass/views/team.scss
+++ b/src/sass/views/team.scss
@@ -46,6 +46,14 @@
     h3,h4 {
         margin: 0;
     }
+    h3 {
+        margin-top: 10px;
+    }
+    h4 {
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 1;
+    }
     >div {
         width: 25%;
         display: inline-block;
