--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -6,7 +6,8 @@ html, body {
     height: 100%;
     // font-family: serif;
     font-family: $body-type;
-    font-size: 16px;
+    font-size: 18px;
+    line-height:1.5;
     font-weight: 300;
     color: rgba(0,0,0,0.8);
     // line-height: 1.5rem;
@@ -665,5 +666,12 @@ figure {
     img {
         display: block;
         margin: 0 auto;
+    }
+}
+
+.split--content {
+    width: 70%;
+    >p:first-child {
+        margin-top: 0;
     }
 }
