--- a/src/sass/components/nav.scss
+++ b/src/sass/components/nav.scss
@@ -84,12 +84,14 @@ nav {
 		display: block;
 		font-family: $main-headings;
 		font-size: 20px;
+		line-height: 20px;
 		text-transform:uppercase;
 		letter-spacing: 3px;
 		padding: 8px 0;
 		padding-left: 16px;
 		@media #{$bp-large} {
 			font-size: 40px;
+			line-height: 40px;
 		}
 	}
 }
@@ -186,6 +188,7 @@ nav {
 	&:hover {
 		cursor: pointer;
 	}
+	color: $yellow;
 	i {
 		color: $white;
 		font-size: 30px;
@@ -194,7 +197,7 @@ nav {
 		display: block;
 		position: fixed; 
 		right: 30px;
-		top: 15px;
+		top: 30px;
 		z-index: 5000000;
     }
 	
@@ -265,19 +268,27 @@ nav {
 		margin-top: 5px;
 		opacity: 0;
 		@media #{$small-and-down} {
-			max-height: 30px;
-			margin-top: 12px;
+			max-height: 0px;
+		margin-top: 5px;
 		}
+	}
+	#mobile-menu-trigger {
+		top: 20px;
 	}
 	.logo-text {
 		color: $yellow;
 		transition: all 0.5s;
 		font-family: "Audimat3000-Regulier",sans-serif;
 		// font-weight: 800;
-		font-size: 44px;
-		line-height: 44px;
+		font-size: 24px;
+		line-height: 24px;
 		display: inline-block;
-		padding-top: 10px;
+		padding-top: 20px;
+		@media #{$medium-and-up} {
+			font-size: 44px;
+			line-height: 44px;
+			padding-top: 10px;
+		}
 	}
 	.uk-navbar.light-nav {
 		a {
