--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -68,10 +68,10 @@ body.noscroll {
 .main-wrapper {
 	// overflow-x: hidden;
 	// @include outer-container;
-	@media #{$bp-small} {
+	@media #{$small-and-down} {
 		padding: 0 30px;
     }
-    @media #{$bp-med} {
+    @media #{$medium-and-up} {
 		padding: 0 40px;
     }
 }
@@ -85,10 +85,11 @@ body.noscroll {
 .blog-entry {
 	position: relative;
 	background-color: none;
-    padding: 50px 0;
+    padding: 0;
     margin: 0 auto;
-	@media #{$bp-large} {
-		max-width: 675px;
+	@media #{$medium-and-up} {
+        max-width: 675px;
+        padding: 50px 0;
     }
     img {
     	position: relative;
@@ -302,10 +303,10 @@ figure {
         padding-bottom: 0;
         text-transform: uppercase;
 		color: $white;
-		text-align: left;
+        text-align: left;
+        line-height: 1.3;
 		@media #{$bp-small} {
-			font-size: modular-scale(3, 1rem);
-			line-height:modular-scale(3, 1.2rem);
+			font-size: 32px;
 		}
 		@media #{$bp-xsmall} {
 			font-size: modular-scale(2, 1.4rem);
@@ -367,7 +368,7 @@ figure {
 
 .default-hero {
 	width: 100%;
-	min-height: 50vh;
+	min-height: 80vh;
     position: relative;
     @media #{$medium-and-up} {
 		min-height: 90vh;
@@ -390,7 +391,7 @@ figure {
 		z-index: 51;
 		margin-top: 150px;
 		@media #{$small-and-down} {
-			margin-top: 10%;
+			margin: 10%;
         }
         @media #{$medium-and-up} {
             margin-top: 50px;
@@ -561,14 +562,14 @@ figure {
         -webkit-overflow-scrolling: touch;
 		// @include flex(0 0 500px);
 		flex: 0 0 500px;
-        @media #{$bp-small} {
-            height: 300px;
+        @media #{$small-and-down} {
+            height: 250px;
             width: 100%;
             margin: 0 0 25px;
 			// @include flex(0 0 300px);
 			flex: 0 0 300px;
         }
-        @media #{$bp-med} {
+        @media #{$medium-and-up} {
             height: 400px;
             width: 100%;
         }
@@ -603,6 +604,10 @@ figure {
             max-height: 280px;
             display: block;
             margin: 0 auto;
+            @media #{$small-and-down} {
+                width: 80%;
+                max-height: auto;
+            }
         }
     }
 }
@@ -673,5 +678,8 @@ figure {
     width: 70%;
     >p:first-child {
         margin-top: 0;
+    }
+    li {
+        margin-bottom: 16px;
     }
 }
