--- a/src/sass/typography.scss
+++ b/src/sass/typography.scss
@@ -4,18 +4,19 @@ div.bigcopy {
     // margin: 0 -5% 40px;
     font-size: 35px;
     line-height: 47px;
-	@media #{$bp-small} {
-		font-size: modular-scale(0);
-		line-height: modular-scale(0);
+	@media #{$small-and-down} {
+		font-size: 22px;
+		line-height: 1.3;
 	}
 	p {
 		font-size: modular-scale(0, 2.2rem);
         line-height: modular-scale(1, 2.2rem);
         font-size: 35px;
         line-height: 47px;
-		@media #{$bp-small} {
-			font-size: modular-scale(0);
-			line-height: modular-scale(0);
+		@media #{$small-and-down} {
+			font-size: 22px;
+			line-height: 1.3;
+			font-weight: 400;
 		}
 	}
 	ol,
@@ -75,11 +76,11 @@ div.bigcopy {
 	}
 	p {
 		margin-bottom: 20px;
-		@media #{$bp-small} {
-		    font-size: modular-scale(0, 1.1rem);
-		    line-height: modular-scale(1, 1.1rem);
+		@media #{$small-and-down} {
+			font-size: 18px;
+			line-height: 1.3;
 		}
-		@media #{$bp-med} {
+		@media #{$medium-and-up} {
 		    font-size: modular-scale(0, 1.5rem);
 			line-height: modular-scale(1, 1.5rem);
 			font-size: 22px;
@@ -105,10 +106,12 @@ span.bolded-text {
 	blockquote {
 		margin: 0;
 		font-style: italic;
-		font-size: modular-scale(1, 1.5rem);
-		line-height: modular-scale(1, 1.6rem);
 		font-weight: 400;
 		font-family: $p-font;
+		@media #{$small-and-down} {
+			font-size: 24px;
+			line-height: 1.5;
+		}
 		p {
 			font-style: italic;
 			font-size: modular-scale(1, 1.5rem);
@@ -116,10 +119,6 @@ span.bolded-text {
 			font-weight: 400;
 			font-family: $p-font;
 			text-transform: none;
-		}
-		@media #{$bp-small} {
-			font-size: modular-scale(1, 1.1rem);
-			line-height: modular-scale(1, 1.1rem);
 		}
 		&:before {
 		    content: '“';
@@ -304,9 +303,9 @@ span.bolded-text {
         line-height: 180px;
         padding: 7px 25px 0px 0px;
         // font-family: $main-headings;
-        @media #{$bp-small} {
-            font-size: modular-scale(3);
-            line-height: modular-scale(3);
+        @media #{$small-and-down} {
+            font-size: 80px; 
+			line-height: 80px;
             padding: 0 10px 0 5px;
             float: left;
         }
