--- a/src/sass/views/services.scss
+++ b/src/sass/views/services.scss
@@ -87,12 +87,15 @@
 	blockquote {
 		margin: 0;
 		font-style: italic;
-		font-size: modular-scale(1, 1.5rem);
-		line-height: modular-scale(1, 1.6rem);
 		font-weight: 400;
 		font-family: $p-font;
 		font-size: 32px;
 		line-height: 34px;
+		position: relative;
+		@media #{$small-and-down} {
+			font-size: 24px;
+			line-height: 1.3;
+		}
 		p {
 			font-style: italic;
 			font-size: modular-scale(1, 1.5rem);
@@ -111,7 +114,12 @@
 		    margin-left: -.4em;
 		    font-size: 90px;
 		    font-family: $main-headings;
-		    color: rgba(0,0,0,0.2);
+			color: rgba(0,0,0,0.1);
+			@media #{$small-and-down} {
+				top: -30px;
+				left: 10px;
+				font-size: 120px;
+			}
 		}
 
 		&:after {
@@ -194,11 +202,20 @@
 .other-services {
 	text-align: center;
 	padding: 50px 0;
+	h3 {
+		@media #{$small-and-down} {
+			font-size: 32px;
+			line-height: 1.3;
+		}
+	}
 	a {
 		text-decoration: none;
 		display: inline-block;
 		margin: 0 8px;
 		height: auto;
 		border: 2px solid black;
+		@media #{$small-and-down} {
+			margin: 10px;
+		}
 	}
 }
