Updates build type

--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -114,11 +114,11 @@ $main-accent: $yellow;
 // }
 
  
-// @font-face {
-// 	font-family: 'Audimat3000-Regulier';
-// 	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-// 	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
-// }
+@font-face {
+	font-family: 'Audimat3000-Regulier';
+	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+}
 
 // @font-face {
 // 	font-family: 'Audimat3000-Leger';
