--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -135,15 +135,15 @@ $main-accent: $yellow;
 
 @font-face {
 	font-family: 'Audimat3000-Leger';
-	src: url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
-	src: url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
 }
 
  
 @font-face {
 	font-family: 'Audimat3000-Regulier';
-	src: url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-	src: url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+	src: url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('https://ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
 }
  
 // @font-face {
