--- a/src/sass/views/home.scss
+++ b/src/sass/views/home.scss
@@ -256,18 +256,20 @@ h2.rw-sentence{
         text-decoration: none;
     }
 	// width: 100%;
-	@media #{$bp-small} {
+	@media #{$small-and-down} {
 		margin: 0 0 0 5px;
 		font-size: modular-scale(3, 1.1rem); 
         line-height: modular-scale(3, 1.6rem); 
         font-size: 30px;
 		line-height: 50px;
 	}
-	@media #{$bp-med} {
+	@media #{$medium-and-up} {
 		text-align: left;
 		margin: 0 8%;
 		font-size: modular-scale(3); 
 		line-height: modular-scale(3, 1.75rem); 
+		font-size: 101px; //32px
+		line-height: 114px;
 	}
 	@media #{$large-and-up} {
 		margin: 0 8%;
@@ -278,28 +280,34 @@ h2.rw-sentence{
 	@media #{$xlarge-and-up} {
 		margin: 0 8%;
 		text-align: left;
-		font-size: 101px; //32px
-		line-height: 114px;
+		font-size: 90px; //32px
+		line-height: 90px;
 	}
 	@media #{$bp-xxlarge} {
 		margin: 0 8%;
 		text-align: left;
-	    font-size: modular-scale(6); 
-		line-height: modular-scale(6, 1.75rem);
+	    font-size: 101px; //32px
+		line-height: 114px;
 	}
 	@media #{$mobile-landscape} {
 		margin: 0 10%;
 		font-size: modular-scale(2, 1.3rem); 
 		line-height: modular-scale(2, 1.4rem); 
+		font-size: 30px;
+		line-height: 50px;
 	}
 	@media #{$bp-xsmall} {
 		margin: 0 0 0 5px;
 		font-size: modular-scale(2, 1.2rem); 
 		line-height: modular-scale(2, 1.5rem); 
+		font-size: 30px;
+		line-height: 50px;
 	}
 	@media screen and (min-width: 1900px) {
 	    font-size: modular-scale(6, 1.4rem); 
-	    line-height: modular-scale(6, 1.6rem); 
+		line-height: modular-scale(6, 1.6rem); 
+		font-size: 101px; //32px
+		line-height: 114px;
 	}
 }
 
