--- a/src/sass/views/team3.scss
+++ b/src/sass/views/team3.scss
@@ -196,10 +196,13 @@
         width: 100%;
         height: 100%;
         background: rgba(0,0,0,0.7);
+
+        background: transparent;
         // transition: all 0.5s ease;
     }
     h3, h4, .team__creds {
         color: $yellow;
+        color: $black;
     }
     h3 {
         font-size: 40px;
@@ -287,6 +290,11 @@
     overflow: hidden;
     color: $black;
     // transition: all 0.5s ease;
+    .knolling-pic {
+        max-width: 1300px;
+        margin: 0 auto 0px;
+        display: block;
+    }
     .push__longbio {
         padding: 24px 40px;
         @media #{$medium-and-up} {
@@ -300,11 +308,6 @@
         img {
             max-width: 100%;
             height: auto;
-        }
-        .knolling-pic {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: block;
         }
     }
     .split {
@@ -450,13 +453,14 @@
     }
   }
 
-  .team__single--foundation {
+  .team__single--foundation,
+  .team__single--leadership {
     background-size: 60%;
     @media #{$medium-and-up} {
-		background-size: 40%;
+		background-size: auto 500px;
     }
     @media #{$xlarge-and-up} {
-		background-size: 20%;
+		background-size: auto 500px;
 	}
 }
 
