--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -94,44 +94,44 @@ $main-accent: $yellow;
 // 	src: url('../webfonts/2F2E8B_2_0.eot?#iefix') format('embedded-opentype'),url('../webfonts/2F2E8B_2_0.woff2') format('woff2'),url('../webfonts/2F2E8B_2_0.woff') format('woff'),url('../webfonts/2F2E8B_2_0.ttf') format('truetype');
 // }
   
-@font-face {
-	font-family: 'Audimat3000-Leger';
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
-}
+// @font-face {
+// 	font-family: 'Audimat3000-Leger';
+// 	src: url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
+// 	src: url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
+// }
 
  
-@font-face {
-	font-family: 'Audimat3000-Regulier';
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-	src: url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('//localhost:8080/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
-}
+// @font-face {
+// 	font-family: 'Audimat3000-Regulier';
+// 	src: url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+// 	src: url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('//localhost:8082/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+// }
 
-@font-face {
-	font-family: 'Audimat3000-Leger';
-	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
-	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
-}
-
- 
-@font-face {
-	font-family: 'Audimat3000-Regulier';
-	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
-}
-
-@font-face {
-	font-family: 'Audimat3000-Leger';
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
-}
+// @font-face {
+// 	font-family: 'Audimat3000-Leger';
+// 	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
+// 	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
+// }
 
  
-@font-face {
-	font-family: 'Audimat3000-Regulier';
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
-	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
-}
+// @font-face {
+// 	font-family: 'Audimat3000-Regulier';
+// 	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+// 	src: url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://ingenuity.hypenotic.com/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+// }
+
+// @font-face {
+// 	font-family: 'Audimat3000-Leger';
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot');
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_3_0.ttf') format('truetype');
+// }
+
+ 
+// @font-face {
+// 	font-family: 'Audimat3000-Regulier';
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot');
+// 	src: url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.eot?#iefix') format('embedded-opentype'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff2') format('woff2'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.woff') format('woff'),url('http://vue.ingenuity.ca/src/assets/fonts/webfonts/2F2E8B_6_0.ttf') format('truetype');
+// }
 
 @font-face {
 	font-family: 'Audimat3000-Leger';
